# racods-lair

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.txt  ROADMAP.txt~  Readme.txt  build.bat  bundle.sh  old.CMakeLists.txt  racods-lair.project  racods-lair.workspace  reformat.sh  run.bat  stats.sh
_work/: backup.human.xcf  bat.xcf  blood.xcf  environs.xcf  gem.xcf  human.xcf  magic-bullet.xcf  racod.xcf  shelf.xcf  skeleton.xcf  spider.xcf  stairs.xcf  torch.xcf  wood-table.xcf
_work/bat/: bat.xml
_work/dragon/: dragon.xml
_work/fireball/: fireball.xml
_work/gem/: gem.xml
_work/human/: cowl.xml  leather.xml  staff.xml
_work/magic-bullet/: magic-bullet.xml
_work/music/: .Cold_Dungeon_Theme.mscz,  Cold Dungeon Theme.gp5  ambience.tg  notizen.txt~  theme.gp5  theme.tg
_work/spider/: spider.xml
_work/torch/: torch.xml
_work/ui/: arrow_left.xcf  deco_border.xcf  focusbar.xcf  option.xcf  option_mark.xcf  pentagram.xcf  selected.xcf  statusbar.xcf
_work/v2 art/: human.ase  sidescroll_human.ase
_work/v3 sticky art/: goblin.ase
data/lua/: demo_ai.lua
data/xml/: globals.xml  locale.xml
ext/src/: boost_precompile.cpp~  luabridge_precompile.cpp~
ext/src/boost/: CMakeLists.txt
extlibs/: CMakeLists.txt
include/: docs.conf  doxygen.conf  tools.hpp
include/core/: algorithm.hpp  algorithm.inl  animation.hpp  collision.hpp  common.hpp  dungeon.hpp  dungeon.inl  entity.hpp  event.hpp  focus.hpp  movement.hpp  music.hpp  physics.hpp  render.hpp  sound.hpp  teleport.hpp  teleport.inl
include/engine/: ai.hpp  avatar.hpp  behavior.hpp  common.hpp  engine.hpp  event.hpp  event.inl  physics.hpp  savemanager.hpp  ui.hpp
include/game/: audio.hpp  autocam.hpp  builder.hpp  common.hpp  entity.hpp  event.hpp  factory.hpp  generator.hpp  hud.hpp  item.hpp  lua.hpp  mod.hpp  mod.inl  navigator.hpp  path.hpp  player.hpp  powerup.hpp  resources.hpp  script.hpp  session.hpp  tracer.hpp  visuals.hpp
include/rpg/: action.hpp  algorithm.hpp  algorithm.inl  balance.hpp  combat.hpp  common.hpp  delay.hpp  effect.hpp  entity.hpp  event.hpp  gameplay.hpp  input.hpp  interact.hpp  item.hpp  perk.hpp  player.hpp  projectile.hpp  quickslot.hpp  resources.hpp  resources.inl  session.hpp  spritepacker.hpp  stats.hpp
include/state/: app_launcher.hpp  camera_editor.hpp  character_viewer.hpp  common.hpp  controls_editor.hpp  controls_viewer.hpp  game.hpp  game_launcher.hpp  loadthread.hpp  lobby.hpp  logo.hpp  pause.hpp  profile_creator.hpp  resources.hpp  savegame_menu.hpp  settings.hpp  story.hpp  title.hpp
include/testsuite/: common.hpp  sfml_system.hpp  sfml_system.hpp~  singleton.hpp
include/ui/: animation.hpp  button.hpp  checkbox.hpp  common.hpp  common.inl  floatingtext.hpp  imgui.hpp  imgui.inl  input.hpp  notificationtext.hpp  playerhud.hpp  (+3 more)
src/: CMakeLists.txt  main.cpp  sfml-fix.cpp
src/core/: CMakeLists.txt  algorithm.cpp  animation.cpp  collision.cpp  common.cpp  dungeon.cpp  entity.cpp  event.cpp  focus.cpp  movement.cpp  music.cpp  physics.cpp  render.cpp  sound.cpp  teleport.cpp
src/engine/: CMakeLists.txt  ai.cpp  avatar.cpp  behavior.cpp  common.cpp  engine.cpp  event.cpp  physics.cpp  savemanager.cpp  ui.cpp
src/game/: CMakeLists.txt  audio.cpp  autocam.cpp  builder.cpp  common.cpp  entity.cpp  event.cpp  factory.cpp  generator.cpp  hud.cpp  item.cpp  lua.cpp  mod.cpp  navigator.cpp  path.cpp  player.cpp  powerup.cpp  resources.cpp  script.cpp  session.cpp  tracer.cpp  visuals.cpp
src/rpg/: CMakeLists.txt  action.cpp  algorithm.cpp  balance.cpp  combat.cpp  common.cpp  delay.cpp  effect.cpp  entity.cpp  event.cpp  gameplay.cpp  input.cpp  interact.cpp  item.cpp  perk.cpp  player.cpp  projectile.cpp  quickslot.cpp  resources.cpp  session.cpp  spritepacker.cpp  stats.cpp
src/state/: CMakeLists.txt  app_launcher.cpp  camera_editor.cpp  character_viewer.cpp  common.cpp  controls_editor.cpp  controls_viewer.cpp  game.cpp  game_launcher.cpp  loadthread.cpp  lobby.cpp  logo.cpp  pause.cpp  profile_creator.cpp  resources.cpp  savegame_menu.cpp  settings.cpp  story.cpp  title.cpp
src/state/tool/: inspector.cpp  modverify.cpp  roomeditor.cpp  savegameviewer.cpp  spritepacker.cpp  spriteviewer.cpp  testmode.cpp  toolmenu.cpp
src/ui/: CMakeLists.txt  animation.cpp  button.cpp  checkbox.cpp  common.cpp  floatingtext.cpp  imgui-SFML.cpp  imgui.cpp  input.cpp  notificationtext.cpp  playerhud.cpp  select.cpp  statusbar.cpp  systemgraph.cpp
src/utils/: CMakeLists.txt  algorithm.cpp  animation_utils.cpp  arcshape.cpp  assert.cpp  binary_utils.cpp  camera.cpp  color.cpp  event_system.cpp  fader.cpp  filesystem.cpp  input_mapper.cpp  lighting_system.cpp  logger.cpp  lua_utils.cpp  math2d.cpp  menu.cpp  menu.cpp~  ortho_tile.cpp  pathfinder.cpp  scope_guard.cpp  spatial_scene.cpp  unionfind.cpp  verifier.cpp
test_suite/: CMakeLists.txt  main.cpp  script.lua  sfml_system.cpp
test_suite/core/: algorithm.cpp  animation.cpp  collision.cpp  focus.cpp  movement.cpp  physics.cpp  physics_integration.cpp  render.cpp  sound.cpp  teleport.cpp
test_suite/engine/: trigger.cpp
test_suite/game/: audio.cpp  autocam.cpp  builder.cpp  common.cpp  factory.cpp  generator.cpp  lua.cpp  mod.cpp  navigator.cpp  path.cpp  powerup.cpp  resources.cpp  script.cpp  tracer.cpp  visuals.cpp
test_suite/rpg/: action.cpp  algorithm.cpp  balance.cpp  combat.cpp  delay.cpp  effect.cpp  gameplay_integration.cpp  input.cpp  interact.cpp  item.cpp  perk.cpp  player.cpp  projectile.cpp  quickslot.cpp  resources.cpp  stats.cpp
test_suite/state/: common.cpp  resources.cpp
test_suite/utils/: algorithm.cpp  animation_utils.cpp  animation_utils.cpp~  arcshape.cpp  assert.cpp  atlas.cpp  atlas.hpp  binary_utils.cpp  camera.cpp  component_system.cpp  delay_system.cpp  enum_map.cpp  enum_utils.cpp  event_system.cpp  input_mapper.cpp  keybinding.cpp  lighting_system.cpp  logger.cpp  lua_utils.cpp  math2d.cpp  ortho_tile.cpp  pathfinder.cpp  priority_queue.cpp  resource_cache.cpp  scope_guard.cpp  spatial_scene.cpp  tiling.cpp  unionfind.cpp  verifier.cpp  xml_utils.cpp
(+184 files in other folders)
